tests/snapshots/guardian_settings_api_test__error_when_invalid_amount_of_guardians_for_proposed_signing_strategy_on_update_guardian_settings.snap
---
source: tests/guardian_settings_api_test.rs
expression: json_response
---
status: Error
payload:
  Error:
    error_message: "Invalid number of guardians supplied. Expected 2, got 1, for signing strategy 'OneOfTwo'"

